Fix: Ajuste na tela de login.

--- a/tsconfig.seed.json
+++ b/tsconfig.seed.json
@@ -6,5 +6,5 @@
     "resolveJsonModule": true,
     "skipLibCheck": true
   },
-  "include": ["src/scripts/*.ts"]
+  "include": ["src/scripts/*.ts/seed.ts"]
 }
