--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "class-variance-authority": "^0.7.1",
     "dayjs": "^1.11.13",
     "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "formidable": "^3.5.2",
     "html5-qrcode": "2.3.8",
     "iconv-lite": "^0.7.0",
     "json2csv": "^5.0.7",
     "jspdf": "^3.0.3",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.544.0",
     "next": "^14.2.32",
     "next-auth": "^4.24.8",
