--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.15",
     "@tanstack/react-table": "^8.21.3",
@@ -25,6 +26,7 @@
     "axios": "^1.12.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
@@ -48,6 +50,7 @@
     "swr": "^2.2.0",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^3.1.1",
+    "tailwindcss-animate": "^1.0.7",
     "tanstack": "^1.0.2",
     "ts-node": "10.9.1",
     "tw-animate-css": "^1.3.8"
